Исправление ошибок от нейроревью. Добавление поля seller_id в dto модели purchase_request для удобства
